level4 一応検出できるようになった

--- a/advanced_programming_signal_processing/Makefile
+++ b/advanced_programming_signal_processing/Makefile
@@ -1,10 +1,16 @@
-matching: level1 level2
+matching: level1 level2 level3 level4
 
 level1: main_level1.c imageUtil.c
 	gcc -w -O3 -o matching_level1 main_level1.c imageUtil.c -lm -mtune=native
 
 level2: main_level2.c imageUtil.c
 	gcc -w -O3 -o matching_level2 main_level2.c imageUtil.c -lm -mtune=native
+
+level3: main_level3.c imageUtil.c
+	gcc -w -O3 -o matching_level3 main_level3.c imageUtil.c -lm -mtune=native
+
+level4: main_level4.c imageUtil.c
+	gcc -w -O3 -o matching_level4 main_level4.c imageUtil.c -lm -mtune=native
 
 clean:
 	$(RM) matching
